Adjust execute e2e tests and pgpass.template

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,7 @@ services:
       - grafana
     ports:
       - "127.0.0.1:6789:6789"
-      - "127.0.0.1:5433-5441:5433-5441"
+      - "127.0.0.1:5433-5441:5433-5442"
       - "127.0.0.1:5672:5672"
     logging:
       <<: *loki-logging
@@ -121,7 +121,7 @@ services:
         networks:
           - internal
           - data-sourcing-service-db
-        image: ${DATA_SOURCING_SERVICE_IMAGE:-ghcr.io/d-fine/dataland/dataland_data_sourcing_service_test:aef45944e3d322596611cc4164bb2ab226407626}
+        image: ${DATA_SOURCING_SERVICE_IMAGE:-ghcr.io/d-fine/dataland/dataland_data_sourcing_service_test:{DATALAND_DATA_SOURCING_SERVICE_TEST_VERSION}}
         expose:
           - "8080"
         depends_on:
@@ -138,7 +138,7 @@ services:
         profiles: [ "production", "testing", "development" ]
         networks:
           - data-sourcing-service-db
-        image: ghcr.io/d-fine/dataland/dataland_postgres_v2:12f3c6d0f4a0aa5b33151971501c62de4ad1c911
+        image: ghcr.io/d-fine/dataland/dataland_postgres_v2:${DATALAND_POSTGRES_V1_VERSION}
         volumes:
           - data_sourcing_service_data:/var/lib/postgresql/data
         environment:
