Adjust inbound-proxy and inbound-admin-proxy; adjust ports in docker-compose.yml

--- a/dataland-inbound-admin-proxy/nginx.conf
+++ b/dataland-inbound-admin-proxy/nginx.conf
@@ -98,6 +98,16 @@ stream {
         proxy_pass api-key-manager-db;
     }
 
+     # DATA-SOURCING-SERVICE
+        upstream data-sourcing-service-db {
+            server data-sourcing-service-db:5432;
+        }
+
+        server {
+            listen 5442 so_keepalive=on;
+            proxy_pass api-key-manager-db;
+        }
+
     # DOCUMENT-MANAGER
     upstream document-manager-db {
         server document-manager-db:5432;
