Set-up local stack

--- a/dataland-inbound-admin-proxy/nginx.conf
+++ b/dataland-inbound-admin-proxy/nginx.conf
@@ -98,15 +98,15 @@ stream {
         proxy_pass api-key-manager-db;
     }
 
-     # DATA-SOURCING-SERVICE
-        upstream data-sourcing-service-db {
-            server data-sourcing-service-db:5432;
-        }
+ # DATA-SOURCING-SERVICE
+    upstream data-sourcing-service-db {
+        server data-sourcing-service-db:5432;
+    }
 
-        server {
-            listen 5442 so_keepalive=on;
-            proxy_pass api-key-manager-db;
-        }
+    server {
+        listen 5442 so_keepalive=on;
+        proxy_pass data-sourcing-service-db;
+    }
 
     # DOCUMENT-MANAGER
     upstream document-manager-db {
