--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -246,6 +246,7 @@ jobs:
           DATALAND_DOCUMENT_MANAGER_CLIENT_SECRET: "password"
           DATALAND_EMAIL_SERVICE_CLIENT_SECRET: "password"
           DATALAND_API_KEY_MANAGER_CLIENT_SECRET: "password"
+          DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET: "password"
           DATALAND_USER_SERVICE_CLIENT_SECRET: "password"
         run: testing/verifyOpenApiFiles.sh
       - name: verify no it.only exists
@@ -318,6 +319,7 @@ jobs:
           KEYCLOAK_DB_PASSWORD: "password"
           BACKEND_DB_PASSWORD: "password"
           API_KEY_MANAGER_DB_PASSWORD: "password"
+          DATA_SOURCING_SERVICE_DB_PASSWORD: "password"
           INTERNAL_STORAGE_DB_PASSWORD: "password"
           DOCUMENT_MANAGER_DB_PASSWORD: "password"
           QA_SERVICE_DB_PASSWORD: "password"
@@ -333,6 +335,7 @@ jobs:
           DATALAND_COMMUNITY_MANAGER_CLIENT_SECRET: "password"
           DATALAND_EMAIL_SERVICE_CLIENT_SECRET: "password"
           DATALAND_API_KEY_MANAGER_CLIENT_SECRET: "password"
+          DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET: "password"
           DATALAND_USER_SERVICE_CLIENT_SECRET: "password"
           DATALAND_DOCUMENT_MANAGER_CLIENT_SECRET: "password"
           DATALAND_BACKEND_CLIENT_SECRET: "password"
