--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -136,6 +136,7 @@ jobs:
           KEYCLOAK_DB_PASSWORD: ${{ secrets.KEYCLOAK_DB_PASSWORD }}
           BACKEND_DB_PASSWORD: ${{ secrets.BACKEND_DB_PASSWORD }}
           API_KEY_MANAGER_DB_PASSWORD: ${{ secrets.API_KEY_MANAGER_DB_PASSWORD }}
+          DATA_SOURCING_SERVICE_DB_PASSWORD: ${{ secrets.DATA_SOURCING_SERVICE_DB_PASSWORD }}
           INTERNAL_STORAGE_DB_PASSWORD: ${{ secrets.INTERNAL_STORAGE_DB_PASSWORD }}
           DOCUMENT_MANAGER_DB_PASSWORD: ${{ secrets.DOCUMENT_MANAGER_DB_PASSWORD }}
           QA_SERVICE_DB_PASSWORD: ${{ secrets.QA_SERVICE_DB_PASSWORD }}
