--- a/environments/.env.template
+++ b/environments/.env.template
@@ -73,6 +73,7 @@ USER_SERVICE_DB_PASSWORD="${USER_SERVICE_DB_PASSWORD}"
 # Variables only for deployment script
 PROXY_IMAGE=ghcr.io/d-fine/dataland/dataland_inbound_proxy:${DATALAND_INBOUND_PROXY_VERSION}
 API_KEY_MANAGER_IMAGE=ghcr.io/d-fine/dataland/dataland_api_key_manager_production:${DATALAND_API_KEY_MANAGER_PRODUCTION_VERSION}
+DATA_SOURCING_SERVICE_IMAGE=ghcr.io/d-fine/dataland/dataland_data_sourcing_service_production:${DATALAND_DATA_SOURCING_SERVICE_PRODUCTION_VERSION}
 DOCUMENT_MANAGER_IMAGE=ghcr.io/d-fine/dataland/dataland_document_manager_production:${DATALAND_DOCUMENT_MANAGER_PRODUCTION_VERSION}
 BACKEND_IMAGE=ghcr.io/d-fine/dataland/dataland_backend_production:${DATALAND_BACKEND_PRODUCTION_VERSION}
 INTERNAL_STORAGE_IMAGE=ghcr.io/d-fine/dataland/dataland_internal_storage_production:${DATALAND_INTERNAL_STORAGE_PRODUCTION_VERSION}
