add revisions repository and fix test

--- a/dataland-data-sourcing-service/src/main/resources/application.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.datasource.url=jdbc:postgresql://data-sourcing-service-db:5432/data_sourc
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.ejb.interceptor=org.hibernate.envers.event.EnversIntegrator
 spring.jackson.deserialization.fail-on-unknown-properties=true
 server.error.whitelabel.enabled=false
 spring.mvc.log-resolved-exception=true
