--- a/dataland-frontend/package.json
+++ b/dataland-frontend/package.json
@@ -55,7 +55,7 @@
     "@vue/eslint-config-typescript": "14.6.0",
     "@vue/test-utils": "2.4.6",
     "@vue/tsconfig": "0.7.0",
-    "cypress": "15.2.0",
+    "cypress": "15.2.0", // merge blocking comment
     "cypress-wait-until": "3.0.2",
     "depcheck": "1.4.7",
     "dompurify": "3.2.6",
