Start implementing workflow (reactions to dataset QA status update messages).

--- a/dataland-data-sourcing-service/src/main/resources/application-nodb.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application-nodb.properties
@@ -6,3 +6,4 @@ spring.datasource.password=password
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.flyway.enabled=false
+spring.rabbitmq.listener.simple.auto-startup=false
