--- a/dataland-data-sourcing-service/src/main/resources/application.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.datasource.hikari.maximum-pool-size=50
 dataland.keycloak.base-url=http://keycloak:8080/keycloak
 dataland.keycloak.client-id=dataland-data-sourcing-service
 dataland.keycloak.client-secret=${DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET}
+dataland.backend.base-url=${INTERNAL_BACKEND_URL:http://backend:8080/api}
 
 spring.flyway.url=jdbc:postgresql://data-sourcing-service-db:5432/data_sourcing_service
 spring.flyway.user=data_sourcing_service
