Fully implement post functionality for data requests.

--- a/dataland-data-sourcing-service/src/main/resources/application.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application.properties
@@ -31,6 +31,7 @@ dataland.keycloak.base-url=http://keycloak:8080/keycloak
 dataland.keycloak.client-id=dataland-data-sourcing-service
 dataland.keycloak.client-secret=${DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET}
 dataland.backend.base-url=${INTERNAL_BACKEND_URL:http://backend:8080/api}
+dataland.community-manager.base-url=http://community-manager:8080/community
 
 spring.flyway.url=jdbc:postgresql://data-sourcing-service-db:5432/data_sourcing_service
 spring.flyway.user=data_sourcing_service
@@ -40,3 +41,6 @@ spring.flyway.schemas=public
 
 springdoc.api-docs.version=OPENAPI_3_0
 # Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
+
+dataland.data-sourcing-service.max-number-of-data-requests-per-day-for-role-user=\
+  ${MAX_NUMBER_OF_DATA_REQUESTS_PER_DAY_FOR_ROLE_USER:10}
