--- a/dataland-data-sourcing-service/DockerfileBase
+++ b/dataland-data-sourcing-service/DockerfileBase
@@ -4,8 +4,11 @@ FROM ghcr.io/d-fine/dataland/dataland_gradle_base:${DATALAND_GRADLE_BASE_VERSION
 WORKDIR /app
 COPY ./dataland-data-sourcing-service/ ./dataland-data-sourcing-service/
 #TO-DO: Is the keycloak adapter necessary?
+COPY ./dataland-message-queue-utils/ ./dataland-message-queue-utils/
 COPY ./dataland-keycloak-adapter/ ./dataland-keycloak-adapter/
 COPY ./dataland-api-key-manager/apiKeyManagerOpenApi.json ./dataland-api-key-manager/apiKeyManagerOpenApi.json
+COPY ./dataland-backend/backendOpenApi.json ./dataland-backend/backendOpenApi.json
+COPY ./dataland-community-manager/communityManagerOpenApi.json ./dataland-community-manager/communityManagerOpenApi.json
 COPY ./dataland-backend-utils/ ./dataland-backend-utils/
 COPY ./.git/ ./.git
 RUN ./gradlew dataland-data-sourcing-service:bootJar --no-daemon --stacktrace
