Fix Rabbit MQ integration; rework UUID use; fix syntax

--- a/dataland-data-sourcing-service/src/main/resources/application.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application.properties
@@ -44,3 +44,9 @@ springdoc.api-docs.version=OPENAPI_3_0
 
 dataland.data-sourcing-service.max-number-of-data-requests-per-day-for-role-user=\
   ${MAX_NUMBER_OF_DATA_REQUESTS_PER_DAY_FOR_ROLE_USER:10}
+
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.virtual-host=vhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=${RABBITMQ_USER}
+spring.rabbitmq.password=${RABBITMQ_PASS}
