--- a/dataland-data-sourcing-service/src/main/resources/application-development.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application-development.properties
@@ -6,3 +6,5 @@ dataland.expose-error-stack-trace-to-api=true
 server.port=8081
 
 spring.flyway.url=jdbc:postgresql://127.0.0.1:5435/data_sourcing_service
+
+spring.rabbitmq.host=localhost
