Add Document Manager clients to Data Sourcing Service and fix non-meaningful test.

--- a/dataland-data-sourcing-service/DockerfileBase
+++ b/dataland-data-sourcing-service/DockerfileBase
@@ -5,6 +5,7 @@ WORKDIR /app
 COPY ./dataland-backend/backendOpenApi.json ./dataland-backend/backendOpenApi.json
 COPY ./dataland-api-key-manager/apiKeyManagerOpenApi.json ./dataland-api-key-manager/apiKeyManagerOpenApi.json
 COPY ./dataland-community-manager/communityManagerOpenApi.json ./dataland-community-manager/communityManagerOpenApi.json
+COPY ./dataland-document-manager/documentManagerOpenApi.json ./dataland-document-manager/documentManagerOpenApi.json
 COPY ./dataland-data-sourcing-service/ ./dataland-data-sourcing-service/
 COPY ./dataland-message-queue-utils/ ./dataland-message-queue-utils/
 COPY ./dataland-backend-utils/ ./dataland-backend-utils/
