--- a/dataland-data-sourcing-service/src/main/resources/application.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application.properties
@@ -32,6 +32,7 @@ dataland.keycloak.client-id=dataland-data-sourcing-service
 dataland.keycloak.client-secret=${DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET}
 dataland.backend.base-url=${INTERNAL_BACKEND_URL:http://backend:8080/api}
 dataland.community-manager.base-url=http://community-manager:8080/community
+dataland.document-manager.base-url=http://document-manager:8080/documents
 
 spring.flyway.url=jdbc:postgresql://data-sourcing-service-db:5432/data_sourcing_service
 spring.flyway.user=data_sourcing_service
