--- a/dataland-user-service/src/main/resources/application.properties
+++ b/dataland-user-service/src/main/resources/application.properties
@@ -29,6 +29,7 @@ spring.jpa.open-in-view=false
 spring.datasource.hikari.maximum-pool-size=50
 dataland.authorization.apikey.enable=true
 dataland.apikeymanager.base-url=http://api-key-manager:8080/api-keys
+dataland.data-sourcing-service.base-url=http://api-key-manager:8080/data-sourcing
 dataland.backend.base-url=${INTERNAL_BACKEND_URL:http://backend:8080/api}
 dataland.keycloak.base-url=http://keycloak:8080/keycloak
 dataland.keycloak.client-id=dataland-user-service
