--- a/dataland-frontend/tsconfig.app.json
+++ b/dataland-frontend/tsconfig.app.json
@@ -10,6 +10,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@clients/*": ["./build/clients/*"]
-    }
+    },
+    "lib": ["ESNext", "DOM", "DOM.Iterable"]
   }
 }
