--- a/dataland-frontend/tsconfig.cypress-e2e.json
+++ b/dataland-frontend/tsconfig.cypress-e2e.json
@@ -13,6 +13,7 @@
       "@clients/*": ["./build/clients/*"],
       "@e2e/*": ["./tests/e2e/*"],
       "@sharedUtils/*": ["./tests/sharedUtils/*"]
-    }
+    },
+    "lib": ["ESNext", "DOM", "DOM.Iterable"]
   }
 }
