Try making swagger UI and API docs public links more restrictive in Dataland Backend.

--- a/dataland-backend/src/main/resources/application.properties
+++ b/dataland-backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.servlet.context-path=/api
 server.max-http-request-header-size=1MB
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${PROXY_PRIMARY_URL:local-dev.dataland.com}/keycloak/realms/datalandsecurity
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/keycloak/realms/datalandsecurity/protocol/openid-connect/certs
-dataland.authorization.publiclinks=/actuator/health,/actuator/health/ping,/actuator/info,/swagger-ui/**,/v3/api-docs/**,/companies/**,/data/**,/metadata,/metadata/**
+dataland.authorization.publiclinks=/actuator/health,/actuator/health/ping,/actuator/info,/swagger-ui/index.html,/v3/api-docs/public,/companies/**,/data/**,/metadata,/metadata/**
 dataland.authorization.internallinks=/internal/**
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=backend
