Fix errors in dataland-data-exporter unit tests

--- a/dataland-data-exporter/src/main/resources/transformationRules/SfdrSqlServer.config
+++ b/dataland-data-exporter/src/main/resources/transformationRules/SfdrSqlServer.config
@@ -1,6 +1,20 @@
 general.general.dataDate=dataDate
-general.general.fiscalYearDeviation=fiscalYearDeviation
-general.general.fiscalYearEnd=fiscalYearEnd
+general.general.fiscalYearDeviation.value=fiscalYearDeviation.value
+general.general.fiscalYearDeviation.dataSource.page=
+general.general.fiscalYearDeviation.dataSource.fileName=
+general.general.fiscalYearDeviation.dataSource.fileReference=
+general.general.fiscalYearDeviation.dataSource.tagName=
+general.general.fiscalYearDeviation.dataSource.publicationDate=
+general.general.fiscalYearDeviation.comment=
+general.general.fiscalYearDeviation.quality=
+general.general.fiscalYearEnd.value=fiscalYearEnd.value
+general.general.fiscalYearEnd.dataSource.page=
+general.general.fiscalYearEnd.dataSource.fileName=
+general.general.fiscalYearEnd.dataSource.fileReference=
+general.general.fiscalYearEnd.dataSource.tagName=
+general.general.fiscalYearEnd.dataSource.publicationDate=
+general.general.fiscalYearEnd.comment=
+general.general.fiscalYearEnd.quality=
 environmental.greenhouseGasEmissions.scope1GhgEmissionsInTonnes.value=scope1GhgEmissionsInTonnes.value
 environmental.greenhouseGasEmissions.scope1GhgEmissionsInTonnes.dataSource.page=
 environmental.greenhouseGasEmissions.scope1GhgEmissionsInTonnes.dataSource.fileName=
