--- a/dataland-inbound-admin-proxy/nginx.conf
+++ b/dataland-inbound-admin-proxy/nginx.conf
@@ -55,6 +55,27 @@ http {
        proxy_pass http://grafana:3000;
     }
 
+        location /api/ {
+            proxy_pass http://backend:8080/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            # ---- E2E/Uploads ----
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+            send_timeout 300s;
+            client_body_timeout 300s;
+
+            # JSON-Responses
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+        }
+
     # Proxy Grafana Live WebSocket connections.
     location /grafana/api/live/ {
       rewrite  ^/grafana/(.*)  /$1 break;
