--- a/dataland-batch-manager/src/main/resources/application.properties
+++ b/dataland-batch-manager/src/main/resources/application.properties
@@ -4,8 +4,9 @@ dataland.dataland-batch-manager.get-all-gleif-companies.flag-file=${GET_ALL_GLEI
 dataland.dataland-batch-manager.get-all-gleif-companies-for-manual-update.flag-file=${GET_ALL_GLEIF_COMPANIES_UPDATE_FLAG_FILE}
 dataland.dataland-batch-manager.get-all-northdata-companies.flag-file=${GET_ALL_NORTHDATA_COMPANIES_FLAG_FILE}
 dataland.backend.base-url=${INTERNAL_BACKEND_URL}
-dataland.communitymanager.base-url=http://community-manager:8080/community
+dataland.data-sourcing-service.base-url=http://data-sourcing-service:8080/data-sourcing
 dataland.dataland-batch-manager.isin-mapping-file=/deltafiles/isinMapping.csv
+dataland.dataland-batch-manager.results-per-page=100
 dataland.keycloak.base-url=http://keycloak:8080/keycloak
 gleif.download.baseurl=https://goldencopy.gleif.org/api/v2/golden-copies/publishes
 gleif.isin.mapping.download.url=https://mapping.gleif.org/api/v2/isin-lei/latest/download
