--- a/dataland-data-sourcing-service/src/main/resources/application.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application.properties
@@ -11,6 +11,8 @@ server.servlet.context-path=/data-sourcing
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${PROXY_PRIMARY_URL:local-dev.dataland.com}/keycloak/realms/datalandsecurity
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/keycloak/realms/datalandsecurity/protocol/openid-connect/certs
 dataland.authorization.publiclinks=/actuator/health,/actuator/health/ping,/actuator/info,/swagger-ui/**,/v3/api-docs/**
+dataland.authorization.apikey.enable=true
+dataland.apikeymanager.base-url=http://api-key-manager:8080/api-keys
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=data_sourcing_service
 spring.datasource.password=${DATA_SOURCING_SERVICE_DB_PASSWORD}
